--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>はじめ様サイト</title>
+    
+    <link rel="icon" href="/file/icon.PNG" type="image/png">
+    
+    <style>
+        body {
+            font-family: sans-serif;
+            text-align: center;
+            padding-top: 50px;
+        }
+        h1 {
+            color: #e6b422;
+        }
+    </style>
+</head>
+<body>
+
+    <h1>H & H</h1>
+    <p>ゆっくりしていってね</p>
+
+</body>
+</html>
 
